--- a/vertx-pin/zero-is/src/main/resources/plugin/is/oob/initialize.yml
+++ b/vertx-pin/zero-is/src/main/resources/plugin/is/oob/initialize.yml
@@ -4,3 +4,8 @@
     - appId
     - path
     - endpoint
+-   dao: cn.vertxup.integration.domain.tables.daos.IDirectoryDao   # I_DIRECTORY
+    key: key
+    unique:
+    - storePath
+    - sigma
