--- a/vertx-import/pom.xml
+++ b/vertx-import/pom.xml
@@ -156,6 +156,11 @@
                 <artifactId>zero-is</artifactId>
                 <version>${zero.version}</version>
             </dependency>
+            <dependency>
+                <groupId>cn.vertxup</groupId>
+                <artifactId>zero-battery</artifactId>
+                <version>${zero.version}</version>
+            </dependency>
             <!-- Zero Infix -->
             <dependency>
                 <groupId>cn.vertxup</groupId>
