--- a/vertx-pin/zero-vie/pom.xml
+++ b/vertx-pin/zero-vie/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>zero-is</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <!-- 模块化专用 -->
+        <dependency>
+            <groupId>cn.vertxup</groupId>
+            <artifactId>zero-battery</artifactId>
+            <version>${project.version}</version>
+        </dependency>
         <!-- User Interface 专用模块 -->
         <dependency>
             <groupId>cn.vertxup</groupId>
