--- a/pom.xml
+++ b/pom.xml
@@ -66,8 +66,8 @@
         <encoding>UTF-8</encoding>
 
         <!-- Vertx Framework Version -->
-        <vertx.version>4.2.5</vertx.version>
-        <stack.version>4.2.5</stack.version>
+        <vertx.version>4.2.6</vertx.version>
+        <stack.version>4.2.6</stack.version>
 
         <jcabi.version>0.23.2</jcabi.version>
         <jersey.version>2.35</jersey.version>
@@ -109,6 +109,7 @@
         <jedis.version>4.2.0-m1</jedis.version>
         <j2objc.version>1.3</j2objc.version>
         <checker.version>3.21.3</checker.version>
+        <termd.version>1.1.9</termd.version>
 
         <!-- elasticsearch version -->
         <elasticsearch.version>7.17.1</elasticsearch.version>
@@ -149,6 +150,7 @@
         <rxjava2.version>2.2.21</rxjava2.version>
         <netty.tcnative.version>2.0.51.Final</netty.tcnative.version>
         <netty.version>4.1.75.Final</netty.version>
+
         <!-- Upload Issue -->
         <hazelcast.version>5.1</hazelcast.version>
         <swagger.version>1.6.0</swagger.version>
@@ -742,6 +744,22 @@
                     <exclusion>
                         <groupId>org.elasticsearch.client</groupId>
                         <artifactId>elasticsearch-rest-client</artifactId>
+                    </exclusion>
+                </exclusions>
+            </dependency>
+            <!-- https://mvnrepository.com/artifact/io.termd/termd-core -->
+            <dependency>
+                <groupId>io.termd</groupId>
+                <artifactId>termd-core</artifactId>
+                <version>${termd.version}</version>
+                <exclusions>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>com.fasterxml.jackson.core</groupId>
+                        <artifactId>jackson-databind</artifactId>
                     </exclusion>
                 </exclusions>
             </dependency>
