--- a/pom.xml
+++ b/pom.xml
@@ -106,7 +106,7 @@
         <mongodb.async.version>3.12.10</mongodb.async.version>
         <poi.version>5.2.2</poi.version>
         <poi.schema.version>4.1.2</poi.schema.version>
-        <jedis.version>4.2.0-m1</jedis.version>
+        <jedis.version>4.2.0</jedis.version>
         <j2objc.version>1.3</j2objc.version>
         <checker.version>3.21.3</checker.version>
         <termd.version>1.1.9</termd.version>
