--- a/vertx-pin/zero-ambient/src/main/resources/plugin/ambient/oob/initialize.yml
+++ b/vertx-pin/zero-ambient/src/main/resources/plugin/ambient/oob/initialize.yml
@@ -41,3 +41,8 @@
     - page
     - position
     - uiMenu
+-   dao: cn.vertxup.ambient.domain.tables.daos.XTagDao     # X_TAG
+    key: key
+    unique:
+    - name
+    - appId
