--- a/vertx-pin/zero-ambient/src/main/resources/plugin/sql/database.yml
+++ b/vertx-pin/zero-ambient/src/main/resources/plugin/sql/database.yml
@@ -42,3 +42,6 @@ databaseChangeLog:
   - include:
       file: plugin/sql/ambient/X_NOTICE.sql
       relativeToChangelogFile: false
+  - include:
+      file: plugin/sql/ambient/X_TAG.sql
+      relativeToChangelogFile: false
