--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -279,3 +279,4 @@ E80602: "(409) - (Workflow) This api could be called when unique `StartEvent`, b
 # Extension Vie Platform
 E81000: "(400) - (Vie) Current environment `{0}` is not supported, please provide new one."
 E81001: "(501) - (Vie) Sorry the command of development could not be used on production environment."
+E81002: "(400) - (Vie) The filename is invalid because it contains special characters. "
