--- a/vertx-pin/zero-ambient/src/main/resources/plugin/ambient/oob/initialize.yml
+++ b/vertx-pin/zero-ambient/src/main/resources/plugin/ambient/oob/initialize.yml
@@ -46,3 +46,7 @@
     unique:
     - name
     - appId
+-   dao: cn.vertxup.ambient.domain.tables.daos.XActivityRuleDao     # X_ACTIVITY_RULE
+    key: key
+    unique:
+    - key
