--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -279,6 +279,8 @@ E80602: "(409) - (Workflow) This api could be called when unique `StartEvent`, b
 E80603: "(404) - (Workflow) The system could not find workflow record by definitionKey = `{0}`"
 E80604: "(409) - (Workflow) The workflow of definitionKey = `{0}` has already been started ! Invalid Call Divert"
 E80605: "(404) - (Workflow) The workflow of instanceId = `{0}` has been not found in your workflow engine"
+E80606: "(500) - (Workflow) The workflow engine could not parsed task type of `{0}`"
+E80607: "(404) - (Workflow) The supplier of event type = `{0}` could not be found"
 # Extension Vie Platform
 E81000: "(400) - (Vie) Current environment `{0}` is not supported, please provide new one."
 E81001: "(501) - (Vie) Sorry the command of development could not be used on production environment."
