--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -209,6 +209,7 @@ E80301: "(500) - (Ambient) The application ( name = `{0}` ) could not be initial
 E80302: "(500) - (Ambient) The Init implementation class = {0} does not `implement` interface Init"
 E80303: "(500) - (Ambient) The Prerequisite class = {0} does not satisfy specification"
 E80304: "(409) - (Atom) The atom (`{0}`) could not generate `Activity` record because trackable is FALSE"
+E80305: "(501) - (Atom) The `indent` field of configuration missing, config =`{0}`"
 
 # Jet
 E80400: "(500) - (Jet) The container try to connect App/Source, but `UnityApp` is null and could not start up"
