--- a/vertx-pin/zero-erp/src/main/resources/workflow/process.vendor.check-in/ui.config.json
+++ b/vertx-pin/zero-erp/src/main/resources/workflow/process.vendor.check-in/ui.config.json
@@ -1,7 +1,6 @@
 {
     "canvas": {
-        "height": 240,
-        "offset": 4
+        "height": 240
     },
     "phase": {
         "forbidden": [
