--- a/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.trip/trip.approve.form.json
+++ b/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.trip/trip.approve.form.json
@@ -1,4 +1,15 @@
 {
+    "hidden": [
+        "requestBy"
+    ],
+    "synonym": {
+        "toUserNo": "领导工号",
+        "toUserName": "领导",
+        "toUserEmail": "领导邮箱",
+        "toUserMobile": "领导电话",
+        "toUserDept": "领导部门",
+        "toUserTeam": "领导工作组"
+    },
     "segment": {
         "TICKET": [
             [
@@ -9,7 +20,6 @@
                             "metadata": "POST,/api/user/search,1,10,sorter=createdAt`ASC",
                             "params.criteria": {
                                 "sigma": "PROP:app.sigma",
-                                "key,<>": "USER:key",
                                 "": true
                             }
                         },
@@ -45,7 +55,10 @@
                             "realname,c": "姓名"
                         }
                     },
-                    "optionJsx.allowClear": true
+                    "optionJsx.allowClear": true,
+                    "optionConfig.rules": [
+                        "required,请填写出差申请人！"
+                    ]
                 },
                 "requestNo,出差人工号,8,,,readOnly=true",
                 "requestMobile,出差人电话,8,,,readOnly=true"
@@ -55,45 +68,85 @@
                     "metadata": "startAt,开始时间,8,,aiDatePicker",
                     "optionJsx.format": "YYYY-MM-DD",
                     "optionJsx.disabledDate": "propFromNow",
+                    "optionJsx.depend.impact": {
+                        "duration": {
+                            "input": {
+                                "start": "VALUE",
+                                "end": "FORM:endAt"
+                            },
+                            "mode": "day",
+                            "target": "days"
+                        }
+                    },
+                    "optionConfig.rules": [
+                        "required,请填写出差开始时间！"
+                    ],
                     "moment": true
                 },
                 {
                     "metadata": "endAt,结束时间,8,,aiDatePicker",
                     "optionJsx.format": "YYYY-MM-DD",
                     "optionJsx.disabledDate": "propFromNow",
+                    "optionJsx.depend.impact": {
+                        "duration": {
+                            "input": {
+                                "start": "FORM:startAt",
+                                "end": "VALUE"
+                            },
+                            "mode": "day",
+                            "target": "days"
+                        }
+                    },
+                    "optionConfig.rules": [
+                        "required,请填写出差结束时间！"
+                    ],
                     "moment": true
                 },
                 {
-                    "metadata": "days,天数,8,,,readOnly=true"
+                    "metadata": "days,天数,8,,,readOnly=true,addonAfter=天"
                 }
             ],
             [
                 {
-                    "metadata": "tripProvince,出差省,8,,aiSelect",
+                    "metadata": "tripProvince,出差省,8,,aiSelect,placeholder=（直辖市/省份）",
                     "optionJsx.config.datum": "source=lbs.state,value=key,label=name",
                     "optionJsx.depend.impact": {
                         "reset": [
                             "tripCity"
                         ]
-                    }
+                    },
+                    "optionConfig.rules": [
+                        "required,请选择出差直辖市或省份！"
+                    ],
+                    "optionJsx.allowClear": true
                 },
                 {
-                    "metadata": "tripCity,出差市,8,,aiSelect",
+                    "metadata": "tripCity,出差市,8,,aiSelect,placeholder=（市辖区/城市）",
                     "optionJsx.config.datum": "source=lbs.city,value=key,label=name",
                     "optionJsx.config.cascade": {
                         "source": "stateId",
                         "target": "FORM:tripProvince"
-                    }
+                    },
+                    "optionConfig.rules": [
+                        "required,请选择出差市辖区或城市！"
+                    ],
+                    "optionJsx.allowClear": true
                 }
             ],
             [
                 {
-                    "metadata": "tripAddress,出差地址,24,,aiTextArea,rows=2"
+                    "metadata": "tripAddress,出差地址,24,,aiTextArea,rows=2",
+                    "optionConfig.rules": [
+                        "required,出差地址不能为空，请填写出差地址！"
+                    ]
                 }
             ],
             [
                 {
-                    "metadata": "reason,出差原因,24,,aiTextArea,rows=2"
+                    "metadata": "reason,出差原因,24,,aiTextArea,rows=2",
+                    "optionConfig.rules": [
+                        "required,请填写出差原因！"
+                    ]
                 }
             ],
             [
