Activity Rule for trip:

--- a/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.trip/ui.config.json
+++ b/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.trip/ui.config.json
@@ -3,14 +3,17 @@
         "height": 240
     },
     "phase": {
-        "forbidden": [
-            "ACCEPTED",
-            "EXPIRED"
+        "addon": [
+            "ADMIT,等待审批:undo,18:#EE3B3B"
         ]
     },
     "synonym": {
         "phase": "申请单状态",
         "title": "申请单标题",
         "serial": "申请单单号"
-    }
+    },
+    "linkage": [
+        "linkageEmployee",
+        "linkageTicket"
+    ]
 }
