--- a/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.trip/trip.approve.form.json
+++ b/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.trip/trip.approve.form.json
@@ -198,7 +198,7 @@
             "data": {
                 "YES": {
                     "confirmed": true,
-                    "phase": "PENDING",
+                    "phase": "ADMIT",
                     "commentApproval": "FORM:confirmedDesc"
                 },
                 "NO": {
