Assignment Workflow Fix

--- a/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.assignment/assignment.approve.form.json
+++ b/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.assignment/assignment.approve.form.json
@@ -163,7 +163,7 @@
             "data": {
                 "YES": {
                     "confirmed": true,
-                    "phase": "PENDING",
+                    "phase": "ADMIT",
                     "commentApproval": "FORM:confirmedDesc"
                 },
                 "NO": {
