--- a/vertx-pin/zero-erp/src/main/resources/workflow/process.vendor.assessment/ui.config.json
+++ b/vertx-pin/zero-erp/src/main/resources/workflow/process.vendor.assessment/ui.config.json
@@ -2,27 +2,13 @@
     "canvas": {
         "height": 240
     },
-    "phase": {
-        "forbidden": [
-            "ACCEPTED",
-            "EXPIRED"
-        ]
-    },
     "synonym": {
-        "phase": "入库单状态",
-        "title": "入库单标题",
-        "serial": "入库单号",
-        "toUserNo": "审批人工号",
-        "toUserName": "审批人",
-        "toUserEmail": "审批人邮箱",
-        "toUserMobile": "审批人电话",
-        "toUserDept": "审批人部门",
-        "toUserTeam": "审批人工作组"
+        "phase": "记录单状态",
+        "title": "记录单标题",
+        "serial": "记录单单号"
     },
-    "request": {
-        "record": {
-            "source": "LINKAGE",
-            "linkage": "linkageAsset"
-        }
-    }
+    "linkage": [
+        "linkageEmployee",
+        "linkageTicket"
+    ]
 }
