--- a/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/config/vertx-error.yml
@@ -284,7 +284,7 @@ E80604: "(409) - (Workflow) The workflow of definitionKey = `{0}` has already be
 E80605: "(404) - (Workflow) The workflow of instanceId = `{0}` has been not found in your workflow engine"
 E80606: "(500) - (Workflow) The workflow engine could not parsed task type of `{0}`"
 E80607: "(404) - (Workflow) The supplier of event type = `{0}` could not be found"
-E80608: "(501) - (Workflow) Your BPMN file has no `EndEvent`, please check by id = `{0}`",
+E80608: "(501) - (Workflow) Your BPMN file has no `EndEvent`, please check by id = `{0}`"
 E80609: "(409) - (Workflow) This api could be called when unique `EndEvent`, but not the size is `{0}`, id = `{1}`"
 
 # Extension Vie Platform
