--- a/vertx-pin/zero-wf/pom.xml
+++ b/vertx-pin/zero-wf/pom.xml
@@ -52,6 +52,7 @@
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-maven-plugin</artifactId>
                 <configuration>
+                    <propertyProviderClass>io.vertx.tp.ke.secure.ZeroLiquibaseEncryption</propertyProviderClass>
                     <!-- 配置文件路径 -->
                     <propertyFile>${basedir}/src/main/resources/plugin/sql/liquibase.properties</propertyFile>
                     <changeLogFile>${basedir}/src/main/resources/plugin/sql/database.yml</changeLogFile>
