process.oa.training update rule

--- a/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.training/ui.config.json
+++ b/vertx-pin/zero-erp/src/main/resources/workflow/process.oa.training/ui.config.json
@@ -5,7 +5,8 @@
     "phase": {
         "addon": [
             "BEGIN,处理中:clock-circle,18:#3053EB",
-            "SUMMARY,审批审批:undo,18:#EE3B3B"
+            "RUNNING,处理中:clock-circle,18:#3053EB",
+            "SUMMARY,等待审批:undo,18:#EE3B3B"
         ]
     },
     "synonym": {
