--- a/vertx-gaia/vertx-co/src/main/resources/up/rules/server.websocket.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/rules/server.websocket.yml
@@ -1,5 +1,5 @@
 typed:
-  # SockJSHandlerOptions
-  handler: JOBJECT
-  # SockJSBridgeOptions
-  bridge: JOBJECT
+  publish: STRING
+  component: CLASS
+  config: JOBJECT
+  server: JOBJECT
