--- a/vertx-ifx/zero-ifx-stomp/pom.xml
+++ b/vertx-ifx/zero-ifx-stomp/pom.xml
@@ -9,5 +9,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>zero-ifx-stomp</artifactId>
-    <name>Infix:「zero-ifx-ws」WebSocket Extension ( Stomp Supported )</name>
+    <name>Infix:「zero-ifx-stomp」WebSocket ( Stomp )</name>
+    <dependencies>
+        <dependency>
+            <groupId>io.vertx</groupId>
+            <artifactId>vertx-stomp</artifactId>
+        </dependency>
+    </dependencies>
 </project>
