--- a/vertx-gaia/vertx-co/src/main/resources/up/rules/server.config.yml
+++ b/vertx-gaia/vertx-co/src/main/resources/up/rules/server.config.yml
@@ -1,17 +1,26 @@
 typed:
-  # HttpServerOptions
   port: INTEGER
-  compressionSupported: BOOLEAN
-  compressionLevel: INTEGER
-  maxWebsocketFrameSize: INTEGER
-  websocketSubProtocols: STRING
-  handle100ContinueAutomatically: BOOLEAN
-  maxChunkSize: INTEGER
-  maxInitialLineLength: INTEGER
-  maxHeaderSize: INTEGER
-  http2ConnectionWindowSize: INTEGER
-  decompressionSupported: BOOLEAN
+  # HttpServerOptionsConverter Sequence
   acceptUnmaskedFrames: BOOLEAN
-  decoderInitialBufferSize: INTEGER
   alpnVersions: JARRAY
-  # NetServerOptions
+  compressionLevel: INTEGER
+  compressionSupported: BOOLEAN
+  decoderInitialBufferSize: INTEGER
+  decompressionSupported: BOOLEAN
+  handle100ContinueAutomatically: BOOLEAN
+  http2ConnectionWindowSize: INTEGER
+  initialSettings: JOBJECT
+  maxChunkSize: INTEGER
+  maxFormAttributeSize: INTEGER
+  maxHeaderSize: INTEGER
+  maxInitialLineLength: INTEGER
+  maxWebSocketFrameSize: INTEGER
+  maxWebSocketMessageSize: INTEGER
+  perFrameWebSocketCompressionSupported: BOOLEAN
+  perMessageWebSocketCompressionSupported: BOOLEAN
+  tracingPolicy: STRING
+  webSocketAllowServerNoContext: BOOLEAN
+  webSocketClosingTimeout: INTEGER
+  webSocketCompressionLevel: INTEGER
+  webSocketPreferredClientNoContext: BOOLEAN
+  webSocketSubProtocols: JARRAY
