--- a/.gitignore
+++ b/.gitignore
@@ -27,7 +27,6 @@ target
 *.versionsBackup
 *.iml
 archive
-!vertx-zeus/up-thea/tool/jooq/*.jar
 file-uploads
 !vertx-zero-example
 .Archive
@@ -36,3 +35,5 @@ configs
 zero-tree.txt
 ~$*.xlsx
 .DS_Store
+# API文档专用目录
+document
