--- a/vertx-istio/zero-ecology/aeon-ambient/pom.xml
+++ b/vertx-istio/zero-ecology/aeon-ambient/pom.xml
@@ -3,16 +3,11 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>vertx-istio</artifactId>
+        <artifactId>zero-ecology</artifactId>
         <groupId>cn.vertxup</groupId>
         <version>0.9.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>zero-edge</artifactId>
-    <name>Cloud:「zero-edge」Zero Edge Development</name>
-    <packaging>pom</packaging>
-    <modules>
-        <module>aeon-code</module>
-        <module>aeon-aurora</module>    <!-- 奥罗拉：平台后端 -->
-    </modules>
+    <artifactId>aeon-ambient</artifactId>
+    <name>Cloud Service:「aeon-ambient」At - Ambient</name>
 </project>
